WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201895
[cairo] Incorrect targetRect in BackingStoreBackendCairoImpl::scroll
https://bugs.webkit.org/show_bug.cgi?id=201895
Summary
[cairo] Incorrect targetRect in BackingStoreBackendCairoImpl::scroll
Fujii Hironori
Reported
2019-09-17 20:44:39 PDT
[cairo] Incorrect targetRect in BackingStoreBackendCairoImpl::scroll In BackingStoreBackendCairoImpl::scroll, targetRect is calculated wrongly by shifting maxX and manxY.
> IntRect targetRect = scrollRect; > targetRect.move(scrollOffset); > targetRect.shiftMaxXEdgeTo(targetRect.maxX() - scrollOffset.width()); > targetRect.shiftMaxYEdgeTo(targetRect.maxY() - scrollOffset.height());
This code came from
Bug 59655
. On the other hand,
Bug 83309
fixed BackingStoreBackendCairoX11::scroll.
> IntRect targetRect = scrollRect; > targetRect.move(scrollOffset); > targetRect.intersect(scrollRect);
Attachments
Patch
(1.90 KB, patch)
2019-09-17 20:54 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-09-17 20:54:23 PDT
Created
attachment 379017
[details]
Patch
Fujii Hironori
Comment 2
2019-09-18 00:57:17 PDT
Comment on
attachment 379017
[details]
Patch Clearing flags on attachment: 379017 Committed
r250027
: <
https://trac.webkit.org/changeset/250027
>
Fujii Hironori
Comment 3
2019-09-18 00:57:21 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-09-18 00:58:22 PDT
<
rdar://problem/55469927
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug