[cairo] Incorrect targetRect in BackingStoreBackendCairoImpl::scroll https://bugs.webkit.org/show_bug.cgi?id=201895

Reviewed by Carlos Garcia Campos.

In BackingStoreBackendCairoImpl::scroll, targetRect is calculated
wrongly by shifting maxX and maxY. Bug 59655 fixed the issue by
removing the shifting, but only for BackingStoreBackendCairoX11::scroll.

No new tests, no behavior change.

* platform/graphics/cairo/BackingStoreBackendCairoImpl.cpp:
(WebCore::BackingStoreBackendCairoImpl::scroll): Take intersection of targetRect and scrollRect.

Canonical link: https://commits.webkit.org/215552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250027 268f45cc-cd09-0410-ab3c-d52691b4dbfc